--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "gb-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "9.5.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
-  }
+    "name": "gb-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "serve": "concurrently \"yarn dev\" \"yarn mock\""
+    },
+    "dependencies": {
+        "antd": "^4.6.2",
+        "dotenv": "^8.2.0",
+        "firebase": "^7.18.0",
+        "js-cookie": "^2.2.1",
+        "next": "9.5.2",
+        "nextjs-progressbar": "^0.0.5",
+        "react": "16.13.1",
+        "react-dom": "16.13.1"
+    },
+    "devDependencies": {
+        "@types/node": "^14.0.27",
+        "@types/react": "^16.9.46",
+        "concurrently": "^5.3.0",
+        "typescript": "^3.9.7"
+    }
 }
