--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "antd": "^4.6.2",
         "dotenv": "^8.2.0",
         "firebase": "^7.18.0",
+        "firebase-admin": "^9.2.0",
         "js-cookie": "^2.2.1",
         "next": "9.5.2",
         "nextjs-progressbar": "^0.0.5",
